// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Navbar component should match the snapshot when open is false 1`] = `
.c0 {
  position: fixed;
  min-width: 100%;
  max-height: 64px;
  height: 64px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  background-color: white;
  z-index: 100;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  padding: 0;
  min-width: 40%;
}

.c2 {
  max-width: 100%;
  min-width: 50%;
}

@media (max-width:768px) {
  .c0 {
    padding: 1rem 0;
  }
}

@media (max-width:576px) {
  .c0 {
    width: 100%;
    max-height: 100%;
    z-index: 99;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    background: #ffffff;
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
    height: 100%;
    position: fixed;
    -webkit-transition: -webkit-transform 0.3s ease-in-out;
    -webkit-transition: transform 0.3s ease-in-out;
    transition: transform 0.3s ease-in-out;
  }

  .c0 a {
    font-family: Playfair Display;
    font-size: 30px;
    font-style: normal;
    font-weight: normal;
    line-height: 38px;
    text-align: left;
    -webkit-text-decoration: none;
    text-decoration: none;
    -webkit-transition: color 0.3s linear;
    transition: color 0.3s linear;
  }
}

@media (max-width:576px) {
  .c1 {
    margin-top: 104px;
    margin-left: 20px;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:576px) {
  .c2 {
    margin-bottom: 60px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 0.5rem;
  }
}

@media (max-width:768px) {

}

@media (max-width:576px) {

}

@media (max-width:768px) {

}

@media (max-width:576px) {

}

<div>
  <nav
    class="c0"
  >
    <div
      data-testid="navlink_/"
    />
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <div
          data-testid="navlink_/"
        />
      </li>
      <li
        class="c2"
      >
        <div
          data-testid="navlink_/help"
        />
      </li>
      <li
        class="c2"
      >
        <div
          data-testid="navlink_#"
        />
      </li>
    </ul>
  </nav>
</div>
`;

exports[`the Navbar component should match the snapshot when open is true 1`] = `
.c0 {
  position: fixed;
  min-width: 100%;
  max-height: 64px;
  height: 64px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  background-color: white;
  z-index: 100;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  padding: 0;
  min-width: 40%;
}

.c2 {
  max-width: 100%;
  min-width: 50%;
}

@media (max-width:768px) {
  .c0 {
    padding: 1rem 0;
  }
}

@media (max-width:576px) {
  .c0 {
    width: 100%;
    max-height: 100%;
    z-index: 99;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    background: #ffffff;
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    height: 100%;
    position: fixed;
    -webkit-transition: -webkit-transform 0.3s ease-in-out;
    -webkit-transition: transform 0.3s ease-in-out;
    transition: transform 0.3s ease-in-out;
  }

  .c0 a {
    font-family: Playfair Display;
    font-size: 30px;
    font-style: normal;
    font-weight: normal;
    line-height: 38px;
    text-align: left;
    -webkit-text-decoration: none;
    text-decoration: none;
    -webkit-transition: color 0.3s linear;
    transition: color 0.3s linear;
  }
}

@media (max-width:576px) {
  .c1 {
    margin-top: 104px;
    margin-left: 20px;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:576px) {
  .c2 {
    margin-bottom: 60px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 0.5rem;
  }
}

@media (max-width:768px) {

}

@media (max-width:576px) {

}

@media (max-width:768px) {

}

@media (max-width:576px) {

}

<div>
  <nav
    class="c0"
    open=""
  >
    <div
      data-testid="navlink_/"
    />
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <div
          data-testid="navlink_/"
        />
      </li>
      <li
        class="c2"
      >
        <div
          data-testid="navlink_/help"
        />
      </li>
      <li
        class="c2"
      >
        <div
          data-testid="navlink_#"
        />
      </li>
    </ul>
  </nav>
</div>
`;
